--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     
     <a href="casa.html">casa</a>
 
-    <script src="/src/js/index.js"></script>
+    <script src="src/js/index.js"></script>
 </body>
 </html>
